components/uc-llamastack/base/llamastack-networkpolicy-allow-from-ai-generation-llm-rag.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-ai-generation-llm-rag
  namespace: llamastack
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ai-generation-llm-rag
    ports:
    - port: 8321
      protocol: TCP
  podSelector:
    matchLabels:
      app: llama-stack
      app.kubernetes.io/instance: llamastack
  policyTypes:
  - Ingress
